--- a/app/src/main/res/layout/activity_hospital_navigation.xml
+++ b/app/src/main/res/layout/activity_hospital_navigation.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/drawerLayout11"
     android:fitsSystemWindows="true"
     android:background="#F7FFFFFF"
     android:minWidth="19dp"
@@ -25,7 +25,7 @@
 
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -38,8 +38,6 @@
 
 
         </androidx.appcompat.widget.Toolbar>
-
-
 
 
         <LinearLayout
@@ -175,7 +173,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/im1"
+                android:id="@+id/im11"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
                 android:layout_marginLeft="18dp"
@@ -218,7 +216,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/im2"
+                android:id="@+id/im21"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
                 android:layout_marginLeft="18dp"
@@ -262,7 +260,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/im3"
+                android:id="@+id/im31"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
                 android:layout_marginLeft="18dp"
@@ -305,7 +303,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/im4"
+                android:id="@+id/im41"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
                 android:layout_marginLeft="18dp"
@@ -368,12 +366,12 @@
 
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_menu"
+        android:id="@+id/navigation_menu1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/drawer_menu">
+        app:headerLayout="@layout/hospitalheader"
+        app:menu="@menu/hospital_menu">
     </com.google.android.material.navigation.NavigationView>
 
 
