--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,57 +4,158 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardBackground"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context="USER.Profile">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:letterSpacing="0.03"
+            android:text="PROFILE"
+            android:textColor="#0d6e6a"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profilephoto"
+        android:layout_width="100dp"
+        android:layout_gravity="center"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_baseline_person_24"
+        app:civ_border_color="@color/teal_200"
+        app:civ_border_width="2dp">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/progressbar1"
+        style="@style/SpinKitView.Large.Circle"
+        android:layout_width="50dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        app:SpinKit_Color="@color/teal_200"
+        android:visibility="invisible"/>
+
 
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:hint="Name" />
-
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Enter your name"
+        android:inputType="text"
+        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
     <EditText
         android:id="@+id/userage"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:hint="Age"
-        android:inputType="number" />
-
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Enter your age"
+        android:inputType="number"
+        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
     <EditText
         android:id="@+id/usernumber"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:hint="Phone Number"
-        android:inputType="phone" />
-
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Enter your Mobile Number"
+        android:inputType="phone"
+        android:drawableStart="@drawable/ic_baseline_phone_android_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
     <EditText
         android:id="@+id/useraddress"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:hint="Address"
-        android:inputType="textPostalAddress" />
-
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Enter your Address"
+        android:inputType="textPostalAddress"
+        android:drawableStart="@drawable/ic_baseline_location_on_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
     <EditText
         android:id="@+id/usermail"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:hint="E-Mail"
-        android:inputType="textEmailAddress" />
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="25dp"
+        android:focusable="false"
+        android:background="@drawable/round_border"
+        android:hint="Enter your E-Mail ID"
+        android:inputType="textEmailAddress"
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
 
     <Button
         android:id="@+id/profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save Profile" />
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/buttonbackground"
+        android:text="Save Profile"
+        android:textColor="#fff" />
 
-    <ImageView
-        android:id="@+id/profilephoto"
+    <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
-        android:layout_height="172dp"
-        app:srcCompat="@drawable/ic_baseline_person_pin_24"
-        tools:srcCompat="@drawable/ic_baseline_person_pin_24" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        app:lottie_fileName="vruser.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+
+
+
+
+
 
 
 </LinearLayout>
