--- a/app/src/main/res/layout/activity_hospital_profile.xml
+++ b/app/src/main/res/layout/activity_hospital_profile.xml
@@ -59,6 +59,7 @@
         android:background="@drawable/round_border"
         android:hint="Enter  Hospital Name"
         android:inputType="text"
+        android:focusable="false"
         android:drawableStart="@drawable/ic_baseline_local_hospital_24"
         android:drawablePadding="15dp"
         android:paddingStart="15dp"
