--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/alegreya_sans"
-                    android:text="Date :"
+                    android:text="Last Modified Date :"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:textStyle="bold" />
