--- a/app/src/main/res/layout/activity_d_a_t_a_b_e_d_s.xml
+++ b/app/src/main/res/layout/activity_d_a_t_a_b_e_d_s.xml
@@ -60,10 +60,11 @@
 
                 <EditText
                     android:id="@+id/norbed123"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/alegreya_sans"
                     android:textSize="85dp"
+                    android:gravity="center"
                     android:inputType="number"/>
 
                 <TextView
@@ -101,10 +102,11 @@
 
                 <EditText
                     android:id="@+id/oxybed123"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/alegreya_sans"
                     android:textSize="85dp"
+                    android:gravity="center"
                     android:inputType="number"/>
 
 
